# convocortex-stt

./: .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  README.md  audio_devices.py  benchmark_transcribe.py  config.example.toml  config.py  config.toml  config_preset_buffer_reset_after_each.toml  config_preset_clipboard_accumulate.toml  convocortex-stt-launcher.cs  convocortex-stt-launcher.csproj  convocortex-stt.deps.json  device-profiles.json  error  file_drop_worker.py  go.mod  handlers.py  how to install realtimestt.txt  idea.md  main.go  model_backends.py  more_or_less_the_plan.md  paste.md  pyproject.toml  recognition.py  speaker_verifier.py  state.json  state.py  stt.py  watched.txt
.agent/workflows/: auto_commit.md
.claude/: settings.local.json
docs/: remote-audio-bridge.md
presets/output-modes/: cursor-with-clipboard-last.toml  cursor.toml  direct-cursor.toml  draft-buffer.toml  draft.toml
scripts/: benchmark_backends.py  install-nightly-shutdown-task.ps1  install-startup-shortcut.ps1  launch-stt-hidden.vbs  restart-stt.ps1  stop-stt.ps1  uninstall-startup-shortcut.ps1
tests/: test_file_drop_worker.py  test_model_backends.py  test_recognition.py  test_speaker_verifier.py
