[project]
name = "convocortex-stt"
version = "0.1.0"
description = "Speech-to-text engine with real-time partial results and NATS event output"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
    "realtimestt",
    "faster-whisper",
    "pyaudio",
    "numpy",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "transformers",
    "pywin32",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.indexes]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
