[project]
name = "convocortex-stt"
version = "0.1.0"
description = "Ambient desktop speech-to-text with wake word, VAD, realtime partials, final output routing, and NATS control"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.10"
dependencies = [
    "realtimestt",
    "faster-whisper",
    "pyaudio",
    "numpy",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "transformers",
    "nemo_toolkit[asr]",
    "nats-py",
    "pywin32; platform_system == 'Windows'",
    "keyboard",
]

[project.optional-dependencies]
windows  = ["pywin32"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
